tweak: update deployment action

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -6,7 +6,7 @@ on:
   push:
     # Pattern matched against refs/tags
     tags:        
-      - '*' # Push events to every tag not containing /
+      - 'v*' # Push events to every tag not containing /
 jobs:
   Deploy-Production:
     runs-on: ubuntu-latest
