🆕 chore(package.json): add eslint and eslint-plugin-react as devDependencies 🔧 chore(package.json): add lint script to run eslint with --fix flag Eslint and eslint-plugin-react are added as devDependencies to the project. The lint script is added to the package.json file to run eslint with the --fix flag, which automatically fixes any linting errors found. This improves the code quality and consistency of the project.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint . --ext .js,.jsx --fix"
   },
   "eslintConfig": {
     "extends": [
@@ -36,5 +37,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "eslint": "^8.39.0",
+    "eslint-plugin-react": "^7.32.2"
   }
 }
